<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/round_corner"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_margin="4dp"
    android:tag="cards main container">

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/state_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_address"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/audio_play"
            android:layout_centerHorizontal="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/distance"
            android:visibility="gone"
            android:textSize="12sp" />
    </RelativeLayout>


</LinearLayout>
