<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_record"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">




        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/primary"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_mic_white_36dp" />

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:textSize="60sp"
            android:fontFamily="sans-serif-light"
            android:layout_alignBottom="@+id/recordProgressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/recordProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:progressDrawable="@drawable/record_progress_bar"
            android:background="@drawable/record_progress_bar_background"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/recording_status_text">

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/btnStopPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_media_pause"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_shadow="false"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/recording_status_text">

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_media_play"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="300dp"
            android:layout_marginBottom="10dp"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_shadow="false"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPause"
        android:drawableLeft="@drawable/ic_media_pause"
        android:text="@string/pause_recording_button"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="RECORD AUDIO"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:onClick="recordAudio"
            style="@style/Widget.AppCompat.Button.Borderless"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/recording_status_text">

        <Button
            android:id="@+id/audio_upload_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/upload"
            android:background="#DF556F"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_status_text"
        android:text="@string/record_prompt"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed"
        android:layout_above="@+id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />






</RelativeLayout>